--- a/docs/user_guide.ipynb
+++ b/docs/user_guide.ipynb
@@ -57,19 +57,24 @@
     {
      "data": {
       "text/plain": [
-       "Config({'container_engine': 'singularity',\n",
+       "Config({'container_engine': 'docker',\n",
        "        'esmvaltool_config': None,\n",
-       "        'ewatercycle_config': PosixPath('/home/peter/.config/ewatercycle/ewatercycle.yaml'),\n",
+       "        'ewatercycle_config': PosixPath('/home/sarah/.config/ewatercycle/ewatercycle.yaml'),\n",
        "        'grdc_location': None,\n",
-       "        'output_dir': PosixPath('/home/peter/ewatercycle/ewatercycle/docs/examples'),\n",
+       "        'output_dir': PosixPath('/home/sarah/GitHub/ewatercycle/docs/examples'),\n",
        "        'parameter_sets': {'lisflood_fraser': {'config': 'lisflood_fraser/settings_lat_lon-Run.xml',\n",
        "                                               'directory': 'lisflood_fraser',\n",
        "                                               'doi': 'N/A',\n",
        "                                               'supported_model_versions': {'20.10'},\n",
        "                                               'target_model': 'lisflood'},\n",
+       "                           'pcrglobwb_example_case': {'config': 'pcrglobwb_example_case/setup_natural_test.ini',\n",
+       "                                                      'directory': 'pcrglobwb_example_case',\n",
+       "                                                      'doi': 'N/A',\n",
+       "                                                      'supported_model_versions': {'setters'},\n",
+       "                                                      'target_model': 'pcrglobwb'},\n",
        "                           'pcrglobwb_rhinemeuse_30min': {'config': 'pcrglobwb_rhinemeuse_30min/setup_natural_test.ini',\n",
        "                                                          'directory': 'pcrglobwb_rhinemeuse_30min',\n",
-       "                                                          'doi': 'https://doi.org/10.5281/zenodo.1045339',\n",
+       "                                                          'doi': 'N/A',\n",
        "                                                          'supported_model_versions': {'setters'},\n",
        "                                                          'target_model': 'pcrglobwb'},\n",
        "                           'wflow_rhine_sbm_nc': {'config': 'wflow_rhine_sbm_nc/wflow_sbm_NC.ini',\n",
@@ -77,8 +82,8 @@
        "                                                  'doi': 'N/A',\n",
        "                                                  'supported_model_versions': {'2020.1.1'},\n",
        "                                                  'target_model': 'wflow'}},\n",
-       "        'parameterset_dir': PosixPath('/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets'),\n",
-       "        'singularity_dir': PosixPath('/home/peter/ewatercycle/ewatercycle')})"
+       "        'parameterset_dir': PosixPath('/home/sarah/GitHub/ewatercycle/docs/examples'),\n",
+       "        'singularity_dir': PosixPath('/home/sarah/GitHub/ewatercycle/docs/examples')})"
       ]
      },
      "execution_count": 2,
@@ -202,8 +207,8 @@
       "Parameter set\n",
       "-------------\n",
       "name=wflow_rhine_sbm_nc\n",
-      "directory=/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/wflow_rhine_sbm_nc\n",
-      "config=/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/wflow_rhine_sbm_nc/wflow_sbm_NC.ini\n",
+      "directory=/home/sarah/GitHub/ewatercycle/docs/examples/wflow_rhine_sbm_nc\n",
+      "config=/home/sarah/GitHub/ewatercycle/docs/examples/wflow_rhine_sbm_nc/wflow_sbm_NC.ini\n",
       "doi=N/A\n",
       "target_model=wflow\n",
       "supported_model_versions={'2020.1.1'}\n"
@@ -254,15 +259,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "95038c96-4c92-458d-b1f0-11dc7a4efa10",
    "metadata": {},
    "outputs": [],
    "source": [
     "custom_parameter_set = ewatercycle.parameter_sets.ParameterSet(\n",
     "    name=\"custom_parameter_set\",\n",
-    "    directory=\"/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min\",\n",
-    "    config=\"/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min/setup_natural_test.ini\",\n",
+    "    directory=\"~/GitHub/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min\",\n",
+    "    config=\"~/GitHub/ewatercycle/docs/examples/parameter-sets/pcrglobwb_rhinemeuse_30min/setup_natural_test.ini\",\n",
     "    target_model=\"pcrglobwb\",\n",
     "    doi=\"https://doi.org/10.5281/zenodo.1045339\",\n",
     "    supported_model_versions={'setters'}\n",
@@ -293,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "2e034d13-e58c-4226-bd94-7924d3bbf155",
    "metadata": {},
    "outputs": [],
@@ -313,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "0b7d0337",
    "metadata": {},
    "outputs": [
@@ -323,7 +328,7 @@
      "text": [
       "Forcing data for Wflow\n",
       "----------------------\n",
-      "Directory: /home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/wflow_rhine_sbm_nc\n",
+      "Directory: /home/sarah/GitHub/ewatercycle/docs/examples/wflow_rhine_sbm_nc\n",
       "Start time: 1991-01-01T00:00:00Z\n",
       "End time: 1991-12-31T00:00:00Z\n",
       "Shapefile: None\n",
@@ -338,7 +343,7 @@
    ],
    "source": [
     "forcing = ewatercycle.forcing.load_foreign(\n",
-    "    directory = parameters.directory,\n",
+    "    directory = parameter_set.directory,\n",
     "    target_model = \"wflow\",\n",
     "    start_time = '1991-01-01T00:00:00Z',\n",
     "    end_time = '1991-12-31T00:00:00Z',\n",
@@ -389,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "5e887394",
    "metadata": {
     "scrolled": true,
@@ -402,7 +407,7 @@
      "text": [
       "Forcing data for Wflow\n",
       "----------------------\n",
-      "Directory: /home/sarah/GitHub/ewatercycle/docs/examples/recipe_wflow_20210719_145723/work/wflow_daily/script\n",
+      "Directory: /home/sarah/GitHub/ewatercycle/docs/examples/recipe_wflow_20210720_113843/work/wflow_daily/script\n",
       "Start time: 1990-01-01T00:00:00Z\n",
       "End time: 1990-01-31T00:00:00Z\n",
       "Shapefile: /home/sarah/GitHub/ewatercycle/docs/examples/data/Rhine/Rhine.shp\n",
@@ -461,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "889d4e6d-a69b-44c0-ba69-6ba77654e30e",
    "metadata": {
     "tags": []
@@ -469,7 +474,7 @@
    "outputs": [],
    "source": [
     "reloaded_forcing = ewatercycle.forcing.load(\n",
-    "    directory='/home/sarah/GitHub/ewatercycle/docs/examples/recipe_wflow_20210719_145723/work/wflow_daily/script'\n",
+    "    directory='~/GitHub/ewatercycle/docs/examples/recipe_wflow_20210720_113843/work/wflow_daily/script'\n",
     ")"
    ]
   },
@@ -483,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "1a4635ce-cfcd-4c78-9997-6db09a29bc45",
    "metadata": {},
    "outputs": [],
@@ -514,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "98e1e41e",
    "metadata": {
     "tags": []
@@ -526,7 +531,7 @@
        "('2020.1.1',)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,10 +563,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "a80d27c7-c298-47f2-b9c1-feb97069feae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:ewatercycle.models.wflow:Config file from parameter set is missing API section, adding section\n",
+      "WARNING:ewatercycle.models.wflow:Config file from parameter set is missing RiverRunoff option in API section, added it with value '2, m/s option'\n"
+     ]
+    }
+   ],
    "source": [
     "model_instance = ewatercycle.models.Wflow(version='2020.1.1', parameter_set=parameter_set, forcing=forcing)"
    ]
@@ -578,10 +592,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "3cfb77df-8815-45a1-8741-c88447790656",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('start_time', '1990-01-01T00:00:00Z'), ('end_time', '1990-01-31T00:00:00Z')]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model_instance.parameters"
    ]
@@ -863,7 +888,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
