--- a/docs/user_guide.ipynb
+++ b/docs/user_guide.ipynb
@@ -831,7 +831,7 @@
    "source": [
     "## Observations\n",
     "\n",
-    "eWaterCycle also includes utilities to easily load observations. Currently, eWaterCycle systems provide access to GRDC data, and we're hoping to expand this in the future."
+    "eWaterCycle also includes utilities to easily load observations. Currently, eWaterCycle systems provide access to GRDC and USGS data, and we're hoping to expand this in the future."
    ]
   },
   {
@@ -1040,19 +1040,11 @@
     "    reference='GRDC',\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a17394f-1e91-4158-8052-e1ed98a52ffb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1066,7 +1058,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
