Minor formatting and fixes

--- a/docs/examples/pcrglobwb.ipynb
+++ b/docs/examples/pcrglobwb.ipynb
@@ -144,7 +144,7 @@
    "source": [
     "## Load forcing data\n",
     "\n",
-    "For this example case, the forcing is already included in the parameter set and configured correctly. Therefore in principle this step can be skipped. However, for the purpose of illustration, we show how the forcing would be loaded using the `ewatercycle.forcing` module, as if it came from another source. To learn about forcing generation, see our [preprocessing examples](preprocessing.ipynb)."
+    "For this example case, the forcing is already included in the parameter set and configured correctly. Therefore in principle this step can be skipped. However, for the purpose of illustration, we show how the forcing would be loaded using the `ewatercycle.forcing` module, as if it came from another source. To learn about forcing generation, see our [preprocessing examples](https://ewatercycle.readthedocs.io/en/latest/examples/generate_forcing.html)."
    ]
   },
   {
