--- a/docs/user_guide.ipynb
+++ b/docs/user_guide.ipynb
@@ -7,11 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Suppress distracting outputs in this notebook\n",
+    "# Suppress distracting outputs in these examples\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
     "import logging\n",
-    "logging.basicConfig(level=logging.WARN)\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
     "logger = logging.getLogger('esmvalcore')\n",
     "logger.setLevel(logging.WARNING)"
    ]
